# Large-Scale-ViT-SLAM

./: .gitignore  LICENSE  README.md  pyproject.toml
aligned_vggt/heads/: alignment_head.py
aligned_vggt/layers/: cross_attention.py  gated_update.py  rope.py
aligned_vggt/models/: featureAligned_vggt.py  pointAligned_wrapped_vggt.py  poseAligned_wrapped_vggt.py
aligned_vggt/utils/: alignment.py  data.py  geometry.py  visualization.py
eval/: reconstruction_metrics.py  trajectory_metrics.py
training/: loss.py  run_model.py  training_metrics.py
training/config/: default_dataset.yaml  test_featureAlignedVGGT_vkitti.yaml  test_pointAlignedWrappedVGGT_vkitti.yaml  test_poseAlignedWrappedVGGT_vkitti.yaml  train_featureAlignedVGGT_vkitti.yaml
training/datasets/: kittiOd.py  vkitti.py  waymo.py
